Refactor code for improved readability and organization
- Updated comments in config.py, docs.py, and rapport_echeances.py for consistency and clarity.
- Enhanced CSS styles in style-general.css for better layout.
- Improved JavaScript functionality in evenements.js for tab management.
- Modified HTML templates (contrat_detail.html, contrats.html, index.html, login.html) to streamline message displays and improve accessibility.
- Added new section for bills in contrat_detail.html with appropriate checks for content availability.
- Updated docker-compose.yaml for better clarity in comments and organization.
- Created .gitkeep files in documents and print directories to maintain structure.

--- a/app/static/css/style-general.css
+++ b/app/static/css/style-general.css
@@ -77,6 +77,10 @@ h2 {
     justify-content: center;
     margin: 20px;
 }
+.messages-container {
+    margin-left: 20%;
+    margin-right: 20%;
+}
 .rectangle {
     display: flex;
     flex-direction: column;
