--- a/app/templates/contrats.html
+++ b/app/templates/contrats.html
@@ -16,8 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fenix&family=Pattaya&display=swap" rel="stylesheet">
-    <!-- Sprite SVG Bootstrap -->
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <!-- Sprite SVG dont Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="house-door-fill" viewBox="0 0 16 16">
             <path d="M8 1.52l6 5V14h-4V9H6v5H2V6.52l6-5zm8 5.67v6.11a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-4H6v4a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7.19l-.94-.73a.8.8 0 0 1-.06-1.14l7-5.33a1.16 1.16 0 0 1 1.4 0l7 5.33a.8.8 0 0 1-.06 1.14L16 7.19z">
         </symbol>
@@ -34,7 +35,9 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-custom overflow-hidden text-center bg-body-tertiary border rounded-3">
                     <li class="breadcrumb-item">
-                        <a class="link-body-emphasis fw-semibold text-decoration-none" href="{{ url_for('home')}}">
+                        <a class="link-body-emphasis fw-semibold text-decoration-none"
+                           href="{{ url_for('home')}}"
+                           title="accueil">
                             <svg class="bi" width="20" height="20">
                                 <use xlink:href="#house-door-fill"></use>
                             </svg>
@@ -46,32 +49,61 @@
                 </ol>
             </nav>
         </div> 
-        <!-- Bouton d'ajout de contrat et filtres de listes-->
-        <div class="row align-items-center">
-            <div class="col-md-3">
-                <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#modalAjout">Ajouter un contrat</button>
+        <!-- Messages de retour -->
+        {% if message or error_message or success_message %}
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    {% if message %}
+                    <div class="alert alert-info alert-dismissible fade show text-center" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endif %}
+                    {% if error_message %}
+                    <div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
+                        {{ error_message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endif %}
+                    {% if success_message %}
+                    <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+                        {{ success_message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endif %}
+                </div>
             </div>
-            <form id="filterForm" class="d-flex col-md-6 align-items-center" action="" onsubmit="filterTable(event)">
+        </div>
+        {% endif %}
+        <!-- Bouton d'ajout de contrat et filtres de listes-->
+        <div class="container-fluid">
+            <div class="row align-items-center">
                 <div class="col-md-3">
-                    <select class="form-select" aria-label="Filtrer" name="TypeFiltre" id="TypeFiltre" onchange="updateSousFiltre()">
-                        <option value="" selected>Filtrer par type</option>
-                        <option value="Finance">Finance</option>
-                        <option value="Juridique">Juridique</option>
-                        <option value="RH">Ressources Humaines</option>
-                        <option value="Materiel">Matériel</option>
-                        <option value="Services">Services</option>
-                        <option value="Autre">Autre</option>
-                    </select>
+                    <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#modalAjout">Ajouter un contrat</button>
                 </div>
-                <div class="col-md-3">
-                    <select disabled class="form-select" aria-label="Filtrer" name="STypeFiltre" id="STypeFiltre">
-                        <option value="" selected>Filtrer par sous-type</option>
-                    </select>
-                </div>
-                <div class="col-md-3">
-                    <button type="submit" class="button">Filtrer</button>
-                </div>
-            </form>
+                <form id="filterForm" class="d-flex col-md-6 align-items-center" action="" onsubmit="filterTable(event)">
+                    <div class="col-md-3">
+                        <select class="form-select" aria-label="Filtrer" name="TypeFiltre" id="TypeFiltre" onchange="updateSousFiltre()">
+                            <option value="" selected>Filtrer par type</option>
+                            <option value="Finance">Finance</option>
+                            <option value="Juridique">Juridique</option>
+                            <option value="RH">Ressources Humaines</option>
+                            <option value="Materiel">Matériel</option>
+                            <option value="Services">Services</option>
+                            <option value="Autre">Autre</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <select disabled class="form-select" aria-label="Filtrer" name="STypeFiltre" id="STypeFiltre">
+                            <option value="" selected>Filtrer par sous-type</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <button type="submit" class="button">Filtrer</button>
+                    </div>
+                </form>
+            </div>
         </div>
         <!-- Table de liste des contrats -->
         <div id="contractsTable" class="container-fluid">
@@ -93,20 +125,20 @@
                     </thead>
                     <tbody>
                         {% for contract in contracts %}
-                            <tr data-type="{{ contract['Type'] }}" data-stype="{{ contract['SType'] }}">
+                            <tr data-type="{{ contract['type_contrat'] }}" data-stype="{{ contract['sous_type_contrat'] }}">
                                 <td class="align-middle">
-                                    <a href="{{ url_for('contrats_by_num', numContrat=contract['id']) }}">
+                                    <a href="{{ url_for('contrats_by_num', id_contrat=contract['id']) }}">
                                         {{ contract['id'] }}
                                     </a>
                                 </td>
-                                <td class="align-middle">{{ contract['Type'] }}</td>
-                                <td class="align-middle">{{ contract['SType'] }}</td>
+                                <td class="align-middle">{{ contract['type_contrat'] }}</td>
+                                <td class="align-middle">{{ contract['sous_type_contrat'] }}</td>
                                 <td class="align-middle">{{ contract['entreprise'] }}</td>
-                                <td class="align-middle">{{ contract['numContratExterne'] }}</td>
+                                <td class="align-middle">{{ contract['id_externe_contrat'] }}</td>
                                 <td class="align-middle">{{ contract['intitule'] }}</td>
-                                <td class="align-middle">{{ contract['dateDebut'] }}</td>
-                                <td class="align-middle">{{ contract['dateFinPreavis'] }}</td>
-                                <td class="align-middle">{{ contract['dateFin'] }}</td>
+                                <td class="align-middle">{{ contract['date_debut'] }}</td>
+                                <td class="align-middle">{{ contract['date_fin_preavis'] }}</td>
+                                <td class="align-middle">{{ contract['date_fin'] }}</td>
                                 <td class="align-middle">
                                     <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#modalModif{{ contract['id'] }}">
                                         Modifier
@@ -178,57 +210,67 @@
         </div>
         <!-- Modaux de modifications de contrats-->
         {% for contract in contracts %}
-        <div class="modal fade" id="modalModif{{ contract['id'] }}" tabindex="-1" aria-labelledby="modalModifLabel" aria-hidden="true">
+        <div class="modal fade" id="modalModif{{ contract['id'] }}" tabindex="-1" aria-labelledby="modalModifLabel"
+             aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="modalModifLabel{{ contract['id'] }}">Modifier contrat {{ contract['entreprise'] }} {{ contract['numContratExterne'] }}</h5>
+                        <h5 class="modal-title" id="modalModifLabel{{ contract['id'] }}">
+                            Modifier contrat {{ contract['entreprise'] }} {{ contract['id_externe_contrat'] }}
+                        </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form action="{{ url_for('contrats_by_num', numContrat=contract['id']) }}" method="POST">
+                        <form action="{{ url_for('contrats_by_num', id_contrat=contract['id']) }}" method="POST">
                             <input type="hidden" name="_method" value="PUT">
                             <div class="mb-3">
                                 <label for="Type{{ contract['id'] }}" class="form-label">Type</label>
-                                <select name="Type{{ contract['id'] }}" class="form-control" id="Type{{ contract['id'] }}" data-contract-id="{{ contract['id'] }}" onchange="updateSousMenu(this)" required>
-                                    <option value="" {% if contract['Type'] == "" %}selected{% endif %}></option>
-                                    <option value="Finance" {% if contract['Type'] == "Finance" %}selected{% endif %}>Finance</option>
-                                    <option value="Juridique" {% if contract['Type'] == "Juridique" %}selected{% endif %}>Juridique</option>
-                                    <option value="RH" {% if contract['Type'] == "RH" %}selected{% endif %}>Ressources Humaines</option>
-                                    <option value="Materiel" {% if contract['Type'] == "Materiel" %}selected{% endif %}>Matériel</option>
-                                    <option value="Services" {% if contract['Type'] == "Services" %}selected{% endif %}>Services</option>
-                                    <option value="Autre" {% if contract['Type'] == "Autre" %}selected{% endif %}>Autre</option>
+                                <select name="Type{{ contract['id'] }}" class="form-control" id="Type{{ contract['id'] }}"
+                                        data-contract-id="{{ contract['id'] }}" onchange="updateSousMenu(this)" required>
+                                    <option value="" {% if contract['type_contrat'] == "" %}selected{% endif %}></option>
+                                    <option value="Finance" {% if contract['type_contrat'] == "Finance" %}selected{% endif %}>Finance</option>
+                                    <option value="Juridique" {% if contract['type_contrat'] == "Juridique" %}selected{% endif %}>Juridique</option>
+                                    <option value="RH" {% if contract['type_contrat'] == "RH" %}selected{% endif %}>Ressources Humaines</option>
+                                    <option value="Materiel" {% if contract['type_contrat'] == "Materiel" %}selected{% endif %}>Matériel</option>
+                                    <option value="Services" {% if contract['type_contrat'] == "Services" %}selected{% endif %}>Services</option>
+                                    <option value="Autre" {% if contract['type_contrat'] == "Autre" %}selected{% endif %}>Autre</option>
                                 </select>
                             </div>
                             <div class="mb-3">
                                 <label for="SType{{ contract['id'] }}" class="form-label">Sous-Type *</label>
                                 <select name="SType{{ contract['id'] }}" class="form-control" id="SType{{ contract['id'] }}" data-contract-id="{{ contract['id'] }}" onfocus="updateSousMenu(this)" required>
-                                    <option value="{{ contract['SType'] }}" selected>{{ contract['SType'] }}</option>
+                                    <option value="{{ contract['sous_type_contrat'] }}" selected>{{ contract['sous_type_contrat'] }}</option>
                                 </select>
                             </div>
                             <div class="mb-3">
                                 <label for="Entreprise{{ contract['id'] }}" class="form-label">Entreprise *</label>
-                                <input type="text" class="form-control" id="Entreprise{{ contract['id'] }}" name="Entreprise{{ contract['id'] }}" value="{{ contract['entreprise'] }}" required>
+                                <input type="text" class="form-control" id="Entreprise{{ contract['id'] }}"
+                                       name="Entreprise{{ contract['id'] }}" value="{{ contract['entreprise'] }}" required>
                             </div>
                             <div class="mb-3">
                                 <label for="numContratExterne{{ contract['id'] }}" class="form-label">N° Contrat *</label>
-                                <input type="text" class="form-control" id="numContratExterne{{ contract['id'] }}" name="numContratExterne{{ contract['id'] }}" value="{{ contract['numContratExterne'] }}" required>
+                                <input type="text" class="form-control" id="numContratExterne{{ contract['id'] }}"
+                                       name="numContratExterne{{ contract['id'] }}" value="{{ contract['id_externe_contrat'] }}" required>
                             </div>
                             <div class="mb3">
                                 <label for="Intitule{{ contract['id'] }}" class="form-label">Intitulé *</label>
-                                <input type="text" class="form-control" id="Intitule{{ contract['id'] }}" name="Intitule{{ contract['id'] }}" value="{{ contract['intitule'] }}" required>
+                                <input type="text" class="form-control" id="Intitule{{ contract['id'] }}"
+                                       name="Intitule{{ contract['id'] }}" value="{{ contract['intitule'] }}" required>
                             </div>
                             <div class="mb-3">
                                 <label for="dateDebut{{ contract['id'] }}" class="form-label">Début *</label>
-                                <input type="date" class="form-control" id="dateDebut{{ contract['id'] }}" name="dateDebut{{ contract['id'] }}" value="{{ contract['dateDebut'] }}" required>
+                                <input type="date" class="form-control" id="dateDebut{{ contract['id'] }}"
+                                       name="dateDebut{{ contract['id'] }}" value="{{ contract['date_debut'] }}" required>
                             </div>
                             <div class="mb-3">
                                 <label for="dateFinPreavis{{ contract['id'] }}" class="form-label">Fin de préavis *</label>
-                                <input type="date" class="form-control" id="dateFinPreavis{{ contract['id'] }}" name="dateFinPreavis{{ contract['id'] }}" value="{{ contract['dateFinPreavis'] }}" required>
+                                <input type="date" class="form-control" id="dateFinPreavis{{ contract['id'] }}"
+                                       name="dateFinPreavis{{ contract['id'] }}" value="{{ contract['date_fin_preavis'] }}" required>
                             </div>
                             <div class="mb-3">
                                 <label for="dateFin{{ contract['id'] }}" class="form-label">Fin</label>
-                                <input type="date" class="form-control" id="dateFin{{ contract['id'] }}" name="dateFin{{ contract['id'] }}" value="{{ contract['dateFin'] }}">
+                                <input type="date" class="form-control" id="dateFin{{ contract['id'] }}"
+                                       name="dateFin{{ contract['id'] }}" value="{{ contract['date_fin'] }}">
                             </div>
                             <button type="submit" class="btn btn-primary">Modifier</button>
                         </form>
